--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -9,6 +9,7 @@
 -r requirements/requirements-dev-third-party.txt
 -r connectors/python/tabsdata_databricks/requirements/requirements-dev-third-party.txt
 -r connectors/python/tabsdata_mongodb/requirements/requirements-dev-third-party.txt
+-r connectors/python/tabsdata_mssql/requirements/requirements-dev-third-party.txt
 -r connectors/python/tabsdata_salesforce/requirements/requirements-dev-third-party.txt
 -r connectors/python/tabsdata_snowflake/requirements/requirements-dev-third-party.txt
 
@@ -17,5 +18,6 @@
 -r requirements/requirements-third-party.txt
 -r connectors/python/tabsdata_databricks/requirements/requirements-third-party.txt
 -r connectors/python/tabsdata_mongodb/requirements/requirements-third-party.txt
+-r connectors/python/tabsdata_mssql/requirements/requirements-third-party.txt
 -r connectors/python/tabsdata_salesforce/requirements/requirements-third-party.txt
 -r connectors/python/tabsdata_snowflake/requirements/requirements-third-party.txt
