--- a/connectors/python/tabsdata_mongodb/pytest.ini
+++ b/connectors/python/tabsdata_mongodb/pytest.ini
@@ -13,6 +13,7 @@ markers =
     mariadb: mark test as requiring a mariadb docker container.
     mongodb: mark tests that require the tabsdata_mongodb package.
     mount_extractor: tests for the mount_extractor tool in tabsserver.
+    mssql: mark test as requiring a mssql docker container.
     mysql: mark test as requiring a mysql docker container.
     oracle: mark test as requiring a oracle docker container. Also, the Oracle Instant Client must be installed.
     performance: mark tests that will be run in a purely performance environment. The
