--- a/connectors/python/tabsdata_salesforce/pyproject.toml
+++ b/connectors/python/tabsdata_salesforce/pyproject.toml
@@ -27,6 +27,7 @@ known_first_party = [
     "tabsdata",
     "tabsdata_databricks",
     "tabsdata_mongodb",
+    "tabsdata_mssql",
     "tabsdata_salesforce",
     "tabsdata_snowflake",
     "ta_features",
