--- a/requirements/requirements-dev-first-party.txt
+++ b/requirements/requirements-dev-first-party.txt
@@ -4,5 +4,6 @@
 
 tabsdata_databricks[deps]==1.2.0
 tabsdata_mongodb[deps]==1.2.0
+tabsdata_mssql[deps]==1.2.0
 tabsdata_salesforce[deps]==1.2.0
 tabsdata_snowflake[deps]==1.2.0
