--- a/requirements/requirements-third-party.txt
+++ b/requirements/requirements-third-party.txt
@@ -8,6 +8,8 @@ click==8.2.1
 cloudpickle==3.1.1
 colorama==0.4.6
 connectorx==0.4.3
+fastavro==1.12.0
+fastparquet==2024.11.0
 filelock==3.18.0
 humanize==4.12.3
 hvac==2.3.0
