--- a/make/fragments/tasks/outdated_rs.toml
+++ b/make/fragments/tasks/outdated_rs.toml
@@ -49,6 +49,6 @@ script = [
     '''
     !include_files ./make/libraries/log.ds
 
-    debug "🚀 ${td-cargo} upgrade --dry-run --compatible allow --incompatible allow --pinned allow --manifest-path ${PROJECT_RS_TY_EXPANSIONS_CARGO_TOML}"
-    exec --fail-on-error ${td-cargo} upgrade --dry-run --compatible allow --incompatible allow --pinned allow --manifest-path ${PROJECT_RS_TY_EXPANSIONS_CARGO_TOML}
+    debug "🚀 cargo upgrade --dry-run --compatible allow --incompatible allow --pinned allow --manifest-path ${PROJECT_RS_TY_EXPANSIONS_CARGO_TOML}"
+    exec --fail-on-error cargo upgrade --dry-run --compatible allow --incompatible allow --pinned allow --manifest-path ${PROJECT_RS_TY_EXPANSIONS_CARGO_TOML}
     ''']
