[TD-739] Normalize use of PIP_INDEX_URL & UV_DEFAULT_INDEX (#638)

--- a/Maketask.toml
+++ b/Maketask.toml
@@ -1292,7 +1292,7 @@ script = [
     array_push ${lines} "❗ These variables must be set in every terminal where you will run the tabsdata cli or the tabsdata server."
     array_push ${lines} ""
     array_push ${lines} "export PIP_INDEX_URL=http://localhost:3141/tabsdata/dev/"
-    array_push ${lines} "export UV_EXTRA_INDEX_URL=http://localhost:3141/tabsdata/dev/"
+    array_push ${lines} "export UV_DEFAULT_INDEX=http://localhost:3141/tabsdata/dev/"
     array_push ${lines} ""
     array_push ${lines} "❗ Install the packages using the standard 'pip install <package>' command."
     array_push ${lines} "❗ If you are using multiple environments, remember to install the packages in each of them separately."
@@ -1301,7 +1301,7 @@ script = [
     array_push ${lines} "❗ These variables must be set in every terminal where you will run the tabsdata cli or the tabsdata server."
     array_push ${lines} ""
     array_push ${lines} "export PIP_INDEX_URL=http://localhost:3141/tabsdata/dev/"
-    array_push ${lines} "export UV_EXTRA_INDEX_URL=http://localhost:3141/tabsdata/dev/"
+    array_push ${lines} "export UV_DEFAULT_INDEX=http://localhost:3141/tabsdata/dev/"
     array_push ${lines} "unset PYTHON_IGNORE_UNAVAILABLE_PUBLIC_PACKAGES"
     array_push ${lines} "unset REQUIRE_SERVER_BINARIES"
     array_push ${lines} "unset REQUIRE_THIRD_PARTY"
@@ -1378,7 +1378,7 @@ script = [
     array_push ${lines} "❗ These variables must be set in every terminal where you will run the tabsdata cli or the tabsdata server."
     array_push ${lines} ""
     array_push ${lines} "unset PIP_INDEX_URL"
-    array_push ${lines} "unset UV_EXTRA_INDEX_URL"
+    array_push ${lines} "unset UV_DEFAULT_INDEX"
     array_push ${lines} "export PYTHON_IGNORE_UNAVAILABLE_PUBLIC_PACKAGES=true"
     array_push ${lines} "export REQUIRE_SERVER_BINARIES=false"
     array_push ${lines} "export REQUIRE_THIRD_PARTY=false"
